--- a/src/components/header/headerBottomButtons.pug
+++ b/src/components/header/headerBottomButtons.pug
@@ -1,4 +1,6 @@
-.header_Bottom_Logo
-    include ../../assets/images/logoImg.svg
-.header_Bottom_Menu 
-.headet_Bottom_AddButton
+mixin menuButton(name, icon, color)
+    .header_Bottom_Logo
+        include ../../assets/images/logoImg.svg
+    .header_Bottom_Menu 
+
+    .header_Bottom_AddButton
