--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -4,4 +4,4 @@ block variables
   title Главная
 
 block content
-  .content контент
+  .content контентфвыафываыфвафвавфа фв афвыа фвыа фвыафыва фвы афв аф в Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus exercitationem explicabo doloribus corrupti soluta veniam voluptate dolore neque. Omnis placeat laborum dolores nobis aperiam asperiores sint alias ab facilis voluptate!
