--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -3,7 +3,9 @@
 @import '../buttons/buttons';
 
 header {
-    position: sticky;
+    position:-webkit-sticky; 
+    position:sticky; 
+    top:0;
 }
 
 .header_Top {
@@ -78,5 +80,6 @@ header {
     width: auto;
     height: 60px;
     display: flex;
+    justify-content: space-between;
     align-items: center;
 }
