--- a/src/components/buttons/buttons.scss
+++ b/src/components/buttons/buttons.scss
@@ -65,7 +65,7 @@ $hoverLine: 2px;
 }
 
 .topButtonIcon {
-    @include centringMixin;
+    @include centringMixin();
 }
 
 .topButtonIcon.grey{
@@ -98,7 +98,7 @@ $hoverLine: 2px;
 }
 
 .stdBtn {
-    @include centringMixin;
+    @include centringMixin();
     width: auto;
     max-height: 37px;
     padding: 10px 18px;
