--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -1,1 +1,57 @@
-footer футр
+include ../buttons/buttons.pug
+footer#footer
+    .footer_innerContainer
+        .footer_leftContainter
+            img(src='../../assets/images/logo.png')
+            .footer_leftContainter_logoUnderText СДАЁМ БАЙ
+            .footer_leftContainter_contactText ИП Шушкевич Андрей Викторович <br> УНП 192602485 Минским горисполкомом <br> 10.02.2016 <br> 220068, РБ, г. Минск, ул. Осипенко, 21, кв.23 <br> +375 29 621 48 33, sdaem@sdaem.by <br> Режим работы: 08:00-22:00
+        
+        .footer_middleContainer
+
+            .footer_middleContainer_Buttons
+
+                .footer_middleContainer_Buttons_leftButtons
+
+                    .footer_middleContainer_Buttons_Button_Title Коттетжи и усадьбы
+                    .footer_middleContainer_Buttons_Button_Title Бани и сауны
+                    .footer_middleContainer_Buttons_Button_Title Авто на прокат
+
+                .footer_middleContainer_Buttons_middleButtons
+                
+                    .footer_middleContainer_Buttons_Button_Title Квартиры
+                    .footer_middleContainer_Buttons_List
+
+                        .footer_middleContainer_Buttons_ButtonList
+                            .footer_middleContainer_Buttons_Button Квартиры в Минске 
+                            .footer_middleContainer_Buttons_Button Квартиры в Гомеле
+                            .footer_middleContainer_Buttons_Button Квартиры в Бресте
+
+                        .footer_middleContainer_Buttons_ButtonList
+                            .footer_middleContainer_Buttons_Button Квартиры в Витебске 
+                            .footer_middleContainer_Buttons_Button Квартиры в Гродно
+                            .footer_middleContainer_Buttons_Button Квартиры в Могилеве 
+
+                .footer_middleContainer_Buttons_rightButtons
+                    .footer_middleContainer_Buttons_ButtonList
+                        .footer_middleContainer_Buttons_Button Новости
+                        .footer_middleContainer_Buttons_Button Размещение и тарифы 
+                        .footer_middleContainer_Buttons_Button Объявления на карте
+                        .footer_middleContainer_Buttons_Button Контакты 
+            .footer_middleContainer_Icons
+                .footer_middleContainer_Icons_Social
+                    .footer_middleContainer_Icons_Social_Text Мы в соцсетях
+                    .footer_middleContainer_Icons_Social_icons
+                        include ../../assets/images/igImg.svg
+                        include ../../assets/images/vkImg.svg
+                        include ../../assets/images/fbImg.svg
+
+                .footer_middleContainer_Icons_Card
+                    img(src='../../assets/images/visaImg.png')
+                    img(src='../../assets/images/webpayImg.png')
+                    img(src='../../assets/images/visaVfImg.png')
+                    img(src='../../assets/images/masterImg.png')
+                    img(src='../../assets/images/secureCodeImg.png')
+                    img(src='../../assets/images/belkartImg.png')
+
+
+
