--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -21,4 +21,4 @@ header#header
                 {text: 'Коттеджи и усадьбы ', csl: 'primary', type:'w6', color: 'black', icon: '', gap: '15px', iconPlace:'right'},
                 {text: 'Бани и Сауны', csl: 'primary', type:'w6', color: 'black', icon: '', gap: '15px', iconPlace:'right'},
                 {text: 'Авто напрокат', csl: 'primary', type:'w6', color: 'black', icon: '', gap: '15px', iconPlace:'right'},] , 'middle_Bottom')
-            +stdBtn('+ Разместить объявление', 'primary', 'purple', '', 'w7', '', 'right', 'yellow')
+            +stdBtn({text: '+ Разместить объявление', cls:'primary', color: 'purple', type: 'w7', gap: '5px', iconPlace: 'right'})
