--- a/src/components/buttons/buttons.scss
+++ b/src/components/buttons/buttons.scss
@@ -5,124 +5,308 @@ $activeLine: 3px;
 $hoverLine: 2px;
 
 .listBtn {
-    height: 100%;
-    font-family: Inter;
-    font-style: normal;
-    font-size: 14px;
-    line-height: 17px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 5px;
+  height: 100%;
+  font-family: Inter;
+  font-style: normal;
+  font-size: 14px;
+  line-height: 17px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 5px;
 
-    @include noSelect();
-}
+  @include noSelect;
 
-
-.listBtn.w4 {
-    font-weight: 400; 
-}
-.listBtn.w5 {
-    font-weight: 500; 
-}
-.listBtn.w6 {
-    font-weight: 600; 
-}
-.listBtn.grey {
-    color: #8291A3;
-}
-.listBtn.purple {
+  &.w4 {
+    font-weight: 400;
+  }
+  
+  &.w5 {
+    font-weight: 500;
+  }
+  
+  &.w6 {
+    font-weight: 600;
+  }
+  
+  &.grey {
+    color: #8291a3;
+  }
+  
+  &.purple {
     color: $c664EF9;
-}
-.listBtn.black {
+  }
+  
+  &.black {
     color: $black;
-}
-
-.listBtn_Group_Left_Top{
-    width: auto;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 0px;
-    gap: 57px;
-}
-
-.listBtn_Group_Right_Top{
-    width: auto;
-    display: flex;
-    justify-content: flex-end;
-    gap: 40px;
-    align-items: center;
-}
-
-.listBtn_Group_Middle_Bottom{
-    height: 100%;
-    margin-left: 84px;
-    margin-right: 92px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 0px;
-    gap: 80px;
-}
-
-.topButtonIcon {
-    @include centringMixin();
-}
-
-.topButtonIcon.grey{
-    path {
-        fill:#8291A3
-    }
-}
-.topButtonIcon.yellow{
-    path {
-        fill:#FFD54F
-    }
-}
-.topButtonIcon.purple{
-    path {
-        fill:#664EF9
-    }
-}
-
-.listBtn:hover{
+  }
+  &:hover {
     height: calc(100% - $hoverLine * 2);
     border-bottom: $hoverLine solid $E4E2E2;
     margin-top: $hoverLine;
-}
-
-.listBtn:active{
+  }
+  
+  &:active {
     height: calc(100% - $activeLine * 2);
     color: $black;
-    border-bottom: 3px solid #FFD54F;
+    border-bottom: 3px solid #ffd54f;
     margin-top: $activeLine;
+  }
 }
 
+
+
+.listBtn_Group_Left_Top {
+  width: auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0;
+  gap: 57px;
+}
+
+.listBtn_Group_Right_Top {
+  width: auto;
+  display: flex;
+  justify-content: flex-end;
+  gap: 40px;
+  align-items: center;
+}
+
+.listBtn_Group_Middle_Bottom {
+  height: 100%;
+  margin-left: 84px;
+  margin-right: 92px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0;
+  gap: 80px;
+}
+
+.topButtonIcon {
+  @include centringMixin;
+  &.grey {
+    path {
+      fill: #8291a3;
+    }
+  }
+  
+  &.yellow {
+    path {
+      fill: #ffd54f;
+    }
+  }
+  
+  &.purple {
+    path {
+      fill: #664ef9;
+    }
+  }
+}
+
+
+//standard button styling--------------------------------------------------------------------------
 .stdBtn {
-    @include centringMixin();
-    width: auto;
-    max-height: 37px;
-    padding: 10px 18px;
-    gap: 10px;
-    font-family: Inter;
-    font-style: normal;
-    font-size: 14px;
-    line-height: 17px;
-    font-weight: 700;
-    border-radius: 19px;
-    text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    word-spacing: 1.77px;
-}
-.stdBtn_innerText {
-    width: auto;
-    white-space:nowrap;
-}
-.stdBtn.purple{
+  @include centringMixin;
+  @include noSelect;
+  width: auto;
+  max-height: 37px;
+  padding: 10px 18px;
+  gap: 10px;
+  font-family: Inter;
+  font-style: normal;
+  font-size: 14px;
+  line-height: 17px;
+  font-weight: 700;
+  border-radius: 19px;
+  
+  text-align: center;
+  word-spacing: 1.77px;
+
+  &.purple {
     background: $purpleGradientRight;
-    color: #ffffff;
+    color: #fff;
+    
+    text-shadow: 0 1px 2px rgb(0 0 0 / 10%);
+    
+    &:hover {
+      background: linear-gradient(90deg, #867CFC 0%, #6929F3 94.5%);
+      box-shadow: 0px 15px 40px rgba(0, 96, 206, 0.15);
+      color: #fff;
+    }
+  }
+  
+  &.yellow {
+    padding: 9px 16px;
+    gap: 5px;
+      background: #FFD54F;
+      border-radius: 22px;
+      color: $black;
+  
+      &:hover {
+          background: #FEC100;
+          border-radius: 22px;
+          color: $black;
+        }
+    }
+   
+  
+  &.white {
+      background: white;
+    color: black;
+    padding: 9px 16px;
+    gap: 5px;
+  
+    &:hover {
+      background: #F8F8F8;
+    color: black;
+  }
+  &:active {
+      background: white;
+    color: black;
+    box-shadow: 0px 5px 20px rgba(0, 96, 206, 0.1);
+  }
+  }
 }
-.stdBtn.white{
-    color: #ffffff;
+
+.stdBtn_innerText {
+  width: auto;
+  white-space: nowrap;
+}
+
+
+
+
+//standard menu styling--------------------------------------------------------------------------
+.stdBtn.menuGrey {
+    color: #686868;
+    background: #F8F8F8;
+    height: 37px;
+    padding: 0 10px;
+    border-radius: 20px;
+    width: calc(150px - 20px);
+    display: flex;
+    justify-content: space-between;
+    gap: 47.5px; 
+    ul {
+        width: inherit;
+        position: absolute;
+        background: #FFFFFF;
+        bottom: -16.5%;
+        box-shadow: 0px 0px 40px rgba(135, 124, 202, 0.3);
+        border-radius: 10px;
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        padding: 0px;
+
+        li {
+            position: relative;
+            width: calc(100% - 10px);
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            padding: 10px 15px;
+            gap: 10px;
+            list-style: none;
+            background: #FFFFFF;
+
+            &:first-child{
+                border-radius: 10px 10px 0 0;
+            }
+            &:last-child{
+                border-radius: 0 0 10px 10px;
+            }
+            &:hover {
+                background: #F8F8F8;
+            }
+        }
+    }
+    &:hover {
+        background: rgba(102, 78, 249, 0.1);
+    }
+    
+    &:active {
+        background: #FFFFFF;
+        height: calc(37px - 4px);
+        width: calc(150px - 20px);
+        border: 2px solid rgba(102, 78, 249, 0.8);
+        padding: 0 8px;
+        ul {
+            margin-left: -8px;
+            display: block;
+        }
+    }    
+}
+
+
+//standard button styling--------------------------------------------------------------------------
+.stdButtonIcon {
+  @include centringMixin;
+  &.black {
+    path {
+      fill: $black;
+    }
+  }
+&.grey {
+  path {
+    fill: #8291a3;
+  }
+}
+
+&.yellow {
+  path {
+    fill: #ffd54f;
+  }
+}
+
+&.purple {
+  path {
+    fill: #664ef9;
+  }
+}
+}
+
+
+//input styling--------------------------------------------------------------------------
+.inputBtn {
+    input {
+        width: 100%;
+        height: 37px;
+        border: none;
+        background: #F8F8F8;
+        border-radius: 20px;
+        padding-left: 14px;
+
+        &.searchMenu{
+            width:80px;
+        }
+        &::-webkit-input-placeholder {
+            @include fontStd(#686868, 14px, 500, 17px);
+            font-family: Arial, Helvetica, sans-serif;
+          }
+          
+          &:-ms-input-placeholder {
+            @include fontStd(#686868, 14px, 500, 17px);
+            font-family: Arial, Helvetica, sans-serif;
+          }
+          
+          &:-moz-placeholder {
+            @include fontStd(#686868, 14px, 500, 17px);
+            font-family: Arial, Helvetica, sans-serif;
+          }
+          
+          &::-moz-placeholder {
+            @include fontStd(#686868, 14px, 500, 17px);
+            font-family: Arial, Helvetica, sans-serif;
+          }
+          &:hover{
+            background: rgba(102, 78, 249, 0.05);
+          }
+          &:focus {
+            outline-color: red;
+            background: rgba(102, 78, 249, 0.05);;
+          }
+    }
 }
