--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -4,79 +4,167 @@
 @import '../styles/helpers/mixins';
 
 .content_container_searchBlockContainer {
-    width: 100%;
-    height: 430px;
-    margin: 0px 80px;
-    background-size: 100%;
-    background-position: center;
-    display: flex;
-    justify-content: center;
-
+  width: 100%;
+  height: 430px;
+  margin: 0 80px;
+  background-size: 100%;
+  background-position: center;
+  display: flex;
+  justify-content: center;
 }
+
 .content_container_searchBlockContainer_background {
-    mix-blend-mode: overlay;
-    background: linear-gradient(360deg, #7E6AF3 15.95%, #6540CD 63.1%);
-    border-radius: 0px 0px 40px 40px;
-    height: 430px;
-    width: 1285px;
-    
-    //position: relative;
-    z-index: 10;
-    img {
-        border-bottom-left-radius: 40px;
-        border-bottom-right-radius: 40px;
-        //position: absolute;
-        z-index: 0;
-    }
+  mix-blend-mode: overlay;
+  background: linear-gradient(360deg, #7e6af3 15.95%, #6540cd 63.1%);
+  border-radius: 0 0 40px 40px;
+  height: 430px;
+  width: 1285px;
 
+  position: absolute;
+  z-index: 10;
+
+  img {
+    border-bottom-left-radius: 40px;
+    border-bottom-right-radius: 40px;
+
+    //position: absolute;
+    z-index: 0;
+  }
 }
+
 .content_container_searchBlockContainer_innerContainer {
-    //position: relative;
-    width: 1285px;
-    z-index: 100;
-    //padding-top: 82.5px;
-    //padding-bottom: 118;
-    //padding-left: 112px;
-    //padding-right: 112px;
-    @include centringMixin('flex-start');
-    flex-direction: column;
-}
-.content_container_searchBlockContainer_innerContainer_title {
-    @include fontStd(#ffffff, 30px, 700, 36px);
-    margin-bottom: 50.5px;
+  position: relative;
+  width: 1285px;
+  height: 100%;
+  z-index: 100;
+    
+  //padding-top: 82.5px;
+  //padding-bottom: 118;
     display: flex;
-    text-align: center;
-    p { 
-        margin: 0px;  
+    justify-content: flex-start;
+    align-items: center;
+  flex-direction: column;
+}
+
+.content_container_searchBlockContainer_innerContainer_title {
+  @include fontStd(#ffffff, 30px, 700, 36px);
+  margin-top: 82.5px;  
+  margin-bottom: 50.5px;
+  display: flex;
+  text-align: center;
+
+  p {
+    margin: 0;
+  }
+
+  text-shadow: 0 2px 5px rgb(0 14 142 / 30%);
+
+  span {
+    color: #ffd54f;
+  }
+}
+
+.content_container_searchBlockContainer_innerContainer_bar {
+  width: 1062px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  //margin-left: 223px;    
+}
+
+.content_container_searchBlockContainer_innerContainer_bar_top {
+  @include fontStd(#ffffff, 14px, 600, 17px);
+  @include noSelect;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: rgba(45, 57, 136, 0.5)
+}
+
+.content_container_searchBlockContainer_innerContainer_bar_top_button {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 13px 20px;
+  gap: 10px;
+
+  &:active {
+    color: $c664EF9;
+    background: #fff;
+    border-radius: 10px 10px 0 0;
+  }
+}
+
+
+.content_container_searchBlockContainer_innerContainer_bar_bottomButtons {
+    width: 100%;
+    height: 100px;
+    background: #FFFFFF;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;    
+    display: flex;
+    flex-direction: row;
+    align-items:flex-start;
+}
+.content_container_searchBlockContainer_innerContainer_bar_bottomButtons_item {
+    margin: 15px 20px;
+    margin-bottom: 20px;
+    height: calc(100% - 35px);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    &.single {
+        height: calc(100% - 65px);
+        margin-top: 32.5px;
+        margin-bottom: 32.5px; 
+    
     }
-    text-shadow: 0px 2px 5px rgba(0, 14, 142, 0.3);
-    span {
-        color: #FFD54F
+    &.double {
+
     }
+    &.searchOptions {
+        margin-left: 4px;
+        margin-right: 4px;
+     }
+    &.rightButtons {
+        margin-left: 10px;
+    }
+}
+
+.content_container_searchBlockContainer_innerContainer_bar_bottomButtons_item_title {
+    @include fontStd(#bdbdbd, 14px, 500, 17px);
+    width: 100%;
+    margin-bottom: 11px;
+}
+hr {
+    height: calc(100% - 32px);
+    opacity: 0.1;
+    border: 1px solid #664EF9;
+    margin: 16px 0px;
 
 }
-.content_container_searchBlockContainer_innerContainer_bar{
-    width: 100%;
-    margin-left: 100px;
-}
-.content_container_searchBlockContainer_innerContainer_bar_top{
-    @include fontStd(#ffffff, 14px, 600, 17px);
-    @include noSelect();
+.content_container_searchBlockContainer_innerContainer_bar_bottomButtons_item_buttons {
     display: flex;
     flex-direction: row;
-    align-items: center;
-    padding: 0px;
-        
-}
-.content_container_searchBlockContainer_innerContainer_bar_top_button {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 13px 20px;
-    gap: 10px;   
-}
-.content_container_searchBlockContainer_innerContainer_bar_top_button:active {
-    color: $c664EF9;
-    background: #FFFFFF;
-    border-radius: 10px 10px 0px 0px;   
+    &.standartButton {
+
+    }
+    &.menuButton {
+
+    }
+    &.inputButton {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 4px;
+    }
+    &.rightButtons {
+        gap: 16px;
+    }
+
 }
