--- a/src/styles/helpers/variables.scss
+++ b/src/styles/helpers/variables.scss
@@ -4,26 +4,25 @@ $maxWidth: 1440px;
 $maxWidthContainer: 1308px;
 
 // color variables
-$background: #E5E5E5;
-$black: #1E2123;
-$FFD54F: #FFD54F;
+$background: #e5e5e5;
+$black: #1e2123;
+$FFD54F: #ffd54f;
 $grey: #686868;
-$lightGrey: #BDBDBD;
-$F4F5FA: #F4F5FA;
-$goldDradient: linear-gradient(106.06deg, #FFD54F 1.12%, #FEC100 97.96%);
-$blackGradient: linear-gradient(0deg, #5E5E5E 0.04%, #2B2B2B 100.04%);
-$FF8A00: #FF8A00;
-$EFB600: #EFB600;
-$c664EF9: #664EF9;
-$FEC100: #FEC100;
-$c7A7F86: #7A7F86;
-$c4E64F9: rgba(102, 78, 249, 0.1);
-$FFD54F: rgba(255, 213, 79, 0.1);
-$obvodka: #F8F8F8;
-$E4E2E2: #E4E2E2;
-$purpleGradientLeft: linear-gradient(270deg, #7E6AF3 0%, #6540CD 100%);
-$purpleGradientTop: linear-gradient(360deg, #7E6AF3 15.95%, #6540CD 63.1%);
-$purpleGradientRight: linear-gradient(90deg, #9D94FF 0%, #6B50E9 94.5%);
-$blueGradientTop: linear-gradient(360deg, #4E64F9 24.57%, #5039BD 90.85%);
-$F8F8F8: #F8F8F8;
-
+$lightGrey: #bdbdbd;
+$F4F5FA: #f4f5fa;
+$goldDradient: linear-gradient(106.06deg, #ffd54f 1.12%, #fec100 97.96%);
+$blackGradient: linear-gradient(0deg, #5e5e5e 0.04%, #2b2b2b 100.04%);
+$FF8A00: #ff8a00;
+$EFB600: #efb600;
+$c664EF9: #664ef9;
+$FEC100: #fec100;
+$c7A7F86: #7a7f86;
+$c4E64F9: rgb(102 78 249 / 10%);
+$FFD54F: rgb(255 213 79 / 10%);
+$obvodka: #f8f8f8;
+$E4E2E2: #e4e2e2;
+$purpleGradientLeft: linear-gradient(270deg, #7e6af3 0%, #6540cd 100%);
+$purpleGradientTop: linear-gradient(360deg, #7e6af3 15.95%, #6540cd 63.1%);
+$purpleGradientRight: linear-gradient(90deg, #9d94ff 0%, #6b50e9 94.5%);
+$blueGradientTop: linear-gradient(360deg, #4e64f9 24.57%, #5039bd 90.85%);
+$F8F8F8: #f8f8f8;
