--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -8,7 +8,8 @@ block content
   .content
     .content_container
           include ../../components/searchBlock/searchBlockComponent.pug
-          .content_container_rentContainer
+          include ../../components/rentsBlock/rentTypesCardsBlock.pug
+          
           .content_container_spaceContainer 
           .content_container_dayRentContainer 
           .content_container_servicesContainer
