--- a/src/components/buttons/buttons.scss
+++ b/src/components/buttons/buttons.scss
@@ -278,7 +278,7 @@ $hoverLine: 2px;
         background: #F8F8F8;
         border-radius: 20px;
         padding-left: 14px;
-
+        padding-right: 14px;
         &.searchMenu{
             width:80px;
         }
@@ -305,7 +305,7 @@ $hoverLine: 2px;
             background: rgba(102, 78, 249, 0.05);
           }
           &:focus {
-            outline-color: red;
+            outline-color: rgba(102, 78, 249, 0.8);
             background: rgba(102, 78, 249, 0.05);;
           }
     }
